grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  labels:
    app: grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: 8643.grafana
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
